# rust-playground

./: README.md
scenario-01-common-collections-in-rust/: README.md
scenario-01-common-collections-in-rust/rust-collections/: Cargo.toml
scenario-01-common-collections-in-rust/rust-collections/benches/: collections_benchmark.rs
scenario-01-common-collections-in-rust/rust-collections/src/: binaryheap_examples.rs  btreemap_examples.rs  hashmap_examples.rs  linked_list_examples.rs  main.rs  set_examples.rs  vec_examples.rs  vecdeque_examples.rs
scenario-02-hashing-algorithms-for-hashmap/: README.md
scenario-02-hashing-algorithms-for-hashmap/scenario-02-hashing-algorithms-for-hashmap/: Cargo.toml
scenario-02-hashing-algorithms-for-hashmap/scenario-02-hashing-algorithms-for-hashmap/benches/: hasher_benchmarks.rs
scenario-02-hashing-algorithms-for-hashmap/scenario-02-hashing-algorithms-for-hashmap/src/: ahash_examples.rs  foldhash_examples.rs  fxhash_examples.rs  main.rs  nohash_examples.rs  security_examples.rs  siphash_examples.rs  xxhash_examples.rs
